--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,11 @@
 /* body style */
 body{
+    font-family: 'Poppins', sans-serif;
     background-color: whitesmoke;
 }
 /* top player style */
 .top-players{
+    margin-bottom: 158px;
     
 }
 .players{
@@ -27,4 +29,61 @@ body{
 .player img{
     width: 300px;
     height: 256px;
+}
+/* highlight style*/
+.highlight{
+    display: flex;
+    align-items: center;
+    margin-left: 148px;
+    margin-right: 156px;
+
+}
+.highlight-info{
+    margin-top: 124px;
+    margin-right: 100px;
+}
+.highlight h1{
+    font-size: 48px;
+    margin-bottom: 8px;
+}
+.detail{
+    margin-bottom: 24px;
+}
+
+.highlight-info a{
+    text-decoration: none;
+    border: 1px solid #E02C6D;
+    padding: 10px 24px;
+    background: #E02C6D;
+    color: white;
+    font-size: 16px;
+    margin-right: 8px;
+}
+
+.highlight img{
+    width: 567px;
+    height: 427px;
+    margin-top: 165px;
+
+}
+/* footer style */
+.footers{
+    display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+    
+}
+.footers img{
+    width: 483.87px;
+    height: 110px;
+  
+}
+.footers p{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.fab{
+    
+    color: black;
 }
