--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@ body{
 }
 /* nav style  */
 .navigations{
+    height: 687px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -58,7 +59,7 @@ body{
 .player{
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    
     margin: 15px 15px 33px 15px;
     border: 1px solid white;
     padding: 15px 15px 33px 15px;
@@ -128,13 +129,15 @@ body{
     /* navigation part start */
     .navigations{
         display: block;
+        flex: none;
     }
     .navigation{
         margin-left: 100px;
         margin-right: 66px;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
     }
     .navigation h1{
+        padding-top: 112px;
         margin-top: 0;
         font-size: 25px;
     }
@@ -156,7 +159,7 @@ body{
         flex-direction: column;
     }
     .footers img{
-        width: 273px;
+        width: 100%;
     }
     /* player part end */
 
