--- a/styles/style.css
+++ b/styles/style.css
@@ -159,7 +159,8 @@ body{
         flex-direction: column;
     }
     .highlight img{
-        width: 100%;
+        width: 329px;
+        height: 259.17px;
     }
     .footers img{
         width: 100%;
