--- a/styles/style.css
+++ b/styles/style.css
@@ -164,7 +164,8 @@ body{
         
     }
     .footers img{
-        width: 100%;
+        width: 300px;
+        height: 256px;
     }
     /* player part end */
 
