--- a/styles/style.css
+++ b/styles/style.css
@@ -56,10 +56,7 @@ body{
     margin-right: 210px;
    
 }
-.player{
-    display: flex;
-    flex-wrap: wrap;
-    
+.player{  
     margin: 15px 15px 33px 15px;
     border: 1px solid white;
     padding: 15px 15px 33px 15px;
@@ -148,7 +145,7 @@ body{
         margin-left: 48px;
     }
     /* navigation part end */
-    /* player part start */
+    /* player,highlight,footer part start */
     .players{
         margin-left: 0;
     }
@@ -167,6 +164,30 @@ body{
         width: 200px;
         height: 156px;
     }
-    /* player part end */
-
+    /* player,highlight,footer part end */
+}
+/* tablet style */
+@media only screen and (min-width:688px) and (max-width:992px) {
+    .navigations{
+        width: 992px;
+        margin-left: 30px;
+    }
+    .players, .highlights{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .highlight{
+       flex-direction: column;
+       margin-left: 170px;
+    }
+    .players{
+        margin-left: 138px;
+    }
+    .photo{
+        width: 429px;
+        height: 339px;
+        padding-right: 290px;
+    }
+    .footers{
+        margin-left: 170px;
+    }
 }
